--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: python
-
 python:
   - "2.7"
   - "3.6"
-
 install:
   - pip install pandas==0.23.4
   - pip install requests==2.19.1
   - pip install beautifulsoup4==4.6.3
-  
+  - pip install investing-scrapper==0.2.9
 script:
   - pytest
