--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 install:
   - pip install pandas==0.23.4
-  - pip install requests==2.19.1
+  - pip install requests>=2.20.0
   - pip install beautifulsoup4==4.6.3
   - pip install investing-scrapper==0.2.9
   
