--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ install:
   - pip install pandas==0.23.4
   - pip install requests==2.21.0
   - pip install beautifulsoup4==4.7.1
-  - pip install investpy==0.4
+  - pip install investpy_test==1.4
   - pip install pytest==4.1.1
+  - pip install lxml==4.3.2
   
 script:
   - pytest
