--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ dist: xenial
 install:
   - pip install pandas==0.24.2
   - pip install requests==2.21.0
+  - pip install unidecode==1.0.23
   - pip install investpy==0.8.2
   - pip install pytest==4.1.1
   - pip install lxml==4.3.2
