--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - pip install requests==2.22.0
   - pip install lxml==4.3.3
   - pip install unidecode==1.0.23
+  - pip install tqdm==4.32.1
   - pip install investpy==0.8.4.5
   - pip install pytest==4.5
   
