coverage tests fixed 2
updated coverage tests as suggested by https://stackoverflow.com/a/46389204/9705070 in order to fix ebd9a676c8708c9bb113ebabf6f515797cf0e152

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install codecov==2.0.15
 
 script:
-  - coverage run tests
+  - pytest --cov=tests/test_investpy.py --cov=tests/test_errors.py
 
 after_success:
   - codecov
