coverage tests fixed 5
upload of new proposal to solve issue https://github.com/alvarob96/investpy/issues/8#issue-449245781 as explained in https://pytest-cov.readthedocs.io/en/latest/reporting.html

worked locally to test coverage of investpy package! https://imgur.com/a/K7E3048

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,10 @@ install:
   - pip install investpy==0.8.4.7
   - pip install pytest==4.5.0
   - pip install codecov==2.0.15
+  - pip install pytest-cov==2.7.1
 
 script:
-  - coverage run tests/test_investpy.py
+  - pytest --cov-report term --cov=investpy tests/
 
 after_success:
   - codecov
