--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,8 @@ install:
   - pip install pandas==0.24.2
   - pip install requests==2.22.0
   - pip install lxml==4.3.3
-  - pip install unidecode==1.0.23
-  - pip install tqdm==4.32.1
-  - pip install investpy==0.8.4.7
+  - pip install Unidecode==1.0.23
+  - pip install investpy==0.8.4.8
   - pip install pytest==4.5.0
   - pip install codecov==2.0.15
   - pip install pytest-cov==2.7.1
