--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Unidecode==1.1.1
-pandas==0.25.0
-lxml==4.4.1
-setuptools==41.1.0
-requests==2.22.0
+Unidecode>=1.1.1
+pandas>=0.25.0
+lxml>=4.4.1
+setuptools>=41.2.0
+requests>=2.22.0
