removed remaining for loops by dataframe selector
- removed remaining for loops by `pandas.DataFrame` selectors as described in #25
- .codecov.yml modified to avoid failing builds due to codecov errors
- replaced for loop on company profile retrieval

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -4,12 +4,12 @@ codecov:
 
 coverage:
   precision: 2
-  round: down
+  round: up
   range: "70...100"
 
   status:
     project: yes
-    patch: yes
+    patch: no
     changes: no
 
 parsers:
