minor coverage fixes
- `.codecov.yml` file updated since target and threshold were not specified
- removed useless try except clauses in `equities.py`
- fixed equity error tests on equity retrieval as dict

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -10,8 +10,8 @@ coverage:
     project:
       default:
         # basic
-        target: auto
-        threshold: null
+        target: 80%
+        threshold: 10%
         base: auto
         # advanced
         branches: null
