--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,8 @@
 include README.md
 include investpy/resources/*
+include investpy/resources/bonds/*
+include investpy/resources/currency_crosses/*
+include investpy/resources/etfs/*
+include investpy/resources/funds/*
+include investpy/resources/indices/*
+include investpy/resources/stocks/*
