included commodities data #37 & stocks updated #70
- commodities.csv data has been retrieved and included in investpy
- commodities data included in MANIFEST.in package data
- stocks.csv file updated since, as stated in #70, some stocks were missing due to a retrieval error

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include README.md
 include investpy/resources/*
 include investpy/resources/bonds/*
+include investpy/resources/commodities/*
 include investpy/resources/currency_crosses/*
 include investpy/resources/etfs/*
 include investpy/resources/funds/*
