--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,4 @@ include investpy/resources/etfs/*
 include investpy/resources/funds/*
 include investpy/resources/indices/*
 include investpy/resources/stocks/*
+include investpy/resources/crypto/*
