--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
+include requirements.txt
 include investpy/resources/*
 include investpy/resources/bonds/*
 include investpy/resources/certificates/*
