--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include README.md
 include requirements.txt
+include docs/requirements.txt
+include tests/requirements.txt
 include investpy/resources/*
