--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include README.md
 include investpy/resources/*
+include investpy/resources/stocks/*
 include requirements.txt
 include docs/requirements.txt
 include tests/requirements.txt
