updated github actions & travis ci files

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,8 @@ python:
 dist: xenial
 
 install:
-  - pip install -r requirements.txt
-  - pip install pytest==5.1.0
-  - pip install codecov==2.0.15
-  - pip install pytest-cov==2.7.1
+  - pip install .
+  - pip install investpy[tests]
 
 script:
   - pytest --cov-report term --cov=investpy tests/
