--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -17,11 +16,11 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        pytest
+    - name: Upgrade pip before package installation
+      run: python -m pip install --upgrade pip
+    - name: Install Python package dependencies
+      run: pip install .
+    - name: Install pytest requirements
+      run: pip install investpy[tests]
+    - name: Run pytest unit tests
+      run: pytest
