solved issue #285 while triggering gh actions

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,6 +1,11 @@
 name: run_tests
 
-on: [push]
+on:
+  push:
+    paths:
+      - .github/workflows/run_tests.yml
+      - investpy/**
+      - tests/**
 
 jobs:
   build:
