🔥 Remove codecov from CI build

--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - .github/workflows/run_tests.yml
+      - .github/**
       - investpy/**
       - tests/**
       - requirements.txt
@@ -34,5 +34,5 @@ jobs:
         pip install .
         pip install .[tests]
     
-    - name: Run pytest tests and check codecov
-      run: pytest --cov-report term --cov=investpy tests/
+    - name: Run pytest tests
+      run: pytest
