--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -8,7 +8,8 @@ on:
       - .github/**
       - investpy/**
       - tests/**
-      - requirements.txt
+      - requirements/requirements.txt
+      - requirements/tests-requirements.txt
       - setup.py
 
 jobs:
